--- a/minimalExample.ipynb
+++ b/minimalExample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "bd5ff400",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b518791f",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f00da01a",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d2b3ccd8",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "944d41c4",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2ae93bfc",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b960107b",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "7c107def",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,17 @@
       "PetalWidth     0\n",
       "grupo          0\n",
       "dtype: int64\n",
-      "gamma:  0.5\n",
+      "W shape:  (5, 5)\n",
+      "W:  [[1.00000000e+00 1.26512406e-02 2.76697670e-03 1.36071536e-06\n",
+      "  1.19155036e-03]\n",
+      " [1.26512406e-02 1.00000000e+00 1.62025751e-01 1.15354565e-04\n",
+      "  1.50694601e-01]\n",
+      " [2.76697670e-03 1.62025751e-01 1.00000000e+00 6.20543465e-05\n",
+      "  9.39413063e-01]\n",
+      " [1.36071536e-06 1.15354565e-04 6.20543465e-05 1.00000000e+00\n",
+      "  2.43008313e-05]\n",
+      " [1.19155036e-03 1.50694601e-01 9.39413063e-01 2.43008313e-05\n",
+      "  1.00000000e+00]]\n",
       "42.70000000000001\n",
       "0.0\n",
       "Number of iterations:  2\n"
@@ -249,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "10c2fb53",
    "metadata": {},
    "outputs": [
@@ -257,10 +267,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gamma:  0.5\n",
+      "W shape:  (10, 10)\n",
+      "W:  [[1.00000000e+00 1.26512406e-02 2.76697670e-03 1.36071536e-06\n",
+      "  1.19155036e-03 2.94209174e-02 1.80529812e-02 1.07520779e-02\n",
+      "  1.25427670e-02 4.63019521e-03]\n",
+      " [1.26512406e-02 1.00000000e+00 1.62025751e-01 1.15354565e-04\n",
+      "  1.50694601e-01 6.80492641e-01 7.52432156e-01 6.29609023e-01\n",
+      "  6.27960647e-01 5.85577786e-01]\n",
+      " [2.76697670e-03 1.62025751e-01 1.00000000e+00 6.20543465e-05\n",
+      "  9.39413063e-01 2.16669373e-01 2.31206404e-01 4.34892567e-01\n",
+      "  1.99499321e-01 4.08543759e-01]\n",
+      " [1.36071536e-06 1.15354565e-04 6.20543465e-05 1.00000000e+00\n",
+      "  2.43008313e-05 8.83097097e-05 1.64607872e-04 2.64173031e-04\n",
+      "  9.73663843e-04 1.03451645e-04]\n",
+      " [1.19155036e-03 1.50694601e-01 9.39413063e-01 2.43008313e-05\n",
+      "  1.00000000e+00 1.97746058e-01 2.15037157e-01 4.08543759e-01\n",
+      "  1.72140471e-01 4.34892567e-01]\n",
+      " [2.94209174e-02 6.80492641e-01 2.16669373e-01 8.83097097e-05\n",
+      "  1.97746058e-01 1.00000000e+00 9.71044759e-01 8.41946365e-01\n",
+      "  8.14018973e-01 7.68413058e-01]\n",
+      " [1.80529812e-02 7.52432156e-01 2.31206404e-01 1.64607872e-04\n",
+      "  2.15037157e-01 9.71044759e-01 1.00000000e+00 8.98435201e-01\n",
+      "  8.96083013e-01 8.35603806e-01]\n",
+      " [1.07520779e-02 6.29609023e-01 4.34892567e-01 2.64173031e-04\n",
+      "  4.08543759e-01 8.41946365e-01 8.98435201e-01 1.00000000e+00\n",
+      "  8.49293294e-01 9.39413063e-01]\n",
+      " [1.25427670e-02 6.27960647e-01 1.99499321e-01 9.73663843e-04\n",
+      "  1.72140471e-01 8.14018973e-01 8.96083013e-01 8.49293294e-01\n",
+      "  1.00000000e+00 7.32823282e-01]\n",
+      " [4.63019521e-03 5.85577786e-01 4.08543759e-01 1.03451645e-04\n",
+      "  4.34892567e-01 7.68413058e-01 8.35603806e-01 9.39413063e-01\n",
+      "  7.32823282e-01 1.00000000e+00]]\n",
       "89.13888888888889\n",
       "0.0\n",
       "Number of iterations:  2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\flopes\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\joblib\\externals\\loky\\backend\\context.py:136: UserWarning: Could not find the number of physical cores for the following reason:\n",
+      "[WinError 2] O sistema não pode encontrar o arquivo especificado\n",
+      "Returning the number of logical cores instead. You can silence this warning by setting LOKY_MAX_CPU_COUNT to the number of cores you want to use.\n",
+      "  warnings.warn(\n",
+      "  File \"C:\\Users\\flopes\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\joblib\\externals\\loky\\backend\\context.py\", line 257, in _count_physical_cores\n",
+      "    cpu_info = subprocess.run(\n",
+      "               ^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\Lib\\subprocess.py\", line 548, in run\n",
+      "    with Popen(*popenargs, **kwargs) as process:\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\Lib\\subprocess.py\", line 1026, in __init__\n",
+      "    self._execute_child(args, executable, preexec_fn, close_fds,\n",
+      "  File \"C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\Lib\\subprocess.py\", line 1538, in _execute_child\n",
+      "    hp, ht, pid, tid = _winapi.CreateProcess(executable, args,\n",
+      "                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n"
      ]
     },
     {
@@ -273,7 +334,7 @@
        "       [5.        , 3.6       , 0.825     , 0.2       ]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
